--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,7 @@
   <div class="navbar-brand">
     <a class="navbar-item">
       <img src="https://image.flaticon.com/icons/png/512/49/49944.png" width="30" height="30">
+      <strong> Coders MX</strong>
     </a>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -24,33 +25,27 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="/">
-        Home
+        Inicio
       </a>
 
       <a class="navbar-item">
-        Recursos
+        Alumnos
       </a>
 
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          Más
-        </a>
+      <a class="navbar-item">
+        Profesores
+      </a>
 
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            Universidades
-          </a>
-          <a class="navbar-item">
-            Comunidad
-          </a>
-          <a class="navbar-item">
-            Contacto
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Reportar un fallo
-          </a>
-        </div>
+      <a class="navbar-item">
+        Universidades
+      </a>
+
+      <a class="navbar-item">
+        Contacto
+      </a>
+
+ 
+        
       </div>
     </div>
 
