--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -82,3 +82,8 @@ a {
 .buttons .button.is-light{
   color: #424242;
 }
+
+.botonsito {
+  background-color: #00B7FF;
+  font-family: 'Courier New', Courier, monospace;
+}
